--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "maps",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Zack Stickles",
+  "license": "ISC",
+  "dependencies": {
+    "http-server": "^0.12.1"
+  }
 }
