--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "http-server"
+    "start": "parcel index.html"
   },
   "author": "Zack Stickles",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.12.1"
+    "parcel-bundler": "^1.12.4",
+    "raphael": "^2.3.0"
   }
 }
